[package]
name = "constant_load"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="oci_loader"
path="src/main.rs"

[features]
# logging = [] # uncomment this to enable logging to stdout

[dependencies]
sysinfo = "0.29.7"
tokio = {version = "1.30.0", features = ["full"]}


